--- a/src/styles.css
+++ b/src/styles.css
@@ -164,6 +164,19 @@ header.major > :last-child {
 }
 
  .text-exemple, .info-texte {
-   height: 0;
+   height: 5em;
    flex: 1;
  }
+
+.flex-max {
+  flex: 10000;
+  height: 0;
+}
+
+.mat-progress-bar-fill::after {
+  background-color: #f56a6a;
+}
+
+.pair {
+  color: #1976d2;
+}
