--- a/src/app/pages/exercice/topics/binding/binding.component.html
+++ b/src/app/pages/exercice/topics/binding/binding.component.html
@@ -3,7 +3,9 @@
     <div class="col-6 row" style="justify-content: center; flex-direction: column">
       <p>Liez la couleur choisie ci-dessous à la couleur du texte ci contre</p>
       <div class="col-12">
-        <label>Couleur :</label>
+        <label>Couleur :
+          <ngx-colors ngx-colors-trigger></ngx-colors>
+        </label>
       </div>
     </div>
     <div class="col-6 d-flex flex-column justify-content-center">
