--- a/src/app/pages/exercice/exercice.component.css
+++ b/src/app/pages/exercice/exercice.component.css
@@ -37,11 +37,11 @@ pre {
 
 .note-box {
   position: absolute;
-  bottom: 0;
+  top: .25em;
   right: 0;
   background-color: white;
 }
 
 i::before {
-  font-size: 1.5em;
+  font-size: 1.25em;
 }
