--- a/src/app/pages/exercice/exercice.component.html
+++ b/src/app/pages/exercice/exercice.component.html
@@ -8,7 +8,7 @@
       <ng-container *ngIf="info.exemple">
         Exemple:
         <div class="row flex-max">
-          <div class="col-6 col-12-small row">
+          <div class="col-6 col-12-small row  h100 overflow-auto">
             <template *ngIf="!info.exemple.desc" #vc></template>
             <div  *ngIf="info.exemple.desc" class="col-12">
               <app-text-code [text]="info.exemple.desc"></app-text-code>
