HTTP Exemple / Liens

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,5 +10,7 @@
     </li>
     <li><a class="icon brands fa-instagram" href="https://www.instagram.com/dawanfrance/"><span
       class="label">Instagram</span></a></li>
+    <li><a class="icon brands fa-linkedin" href="https://www.linkedin.com/company/dawan/"><span
+      class="label">LinkedIn</span></a></li>
   </ul>
 </header>
